--- a/user_creation_with_password.yml
+++ b/user_creation_with_password.yml
@@ -2,11 +2,11 @@
  - name: creating users with password
    hosts: ansible-node2-rhel76
    become: yes
-#   vars:
-#     password: redhat1
-   vars_prompt: 
-     - name: password
-       prompt: What is your password?
+   vars:
+     password: redhat1
+#   vars_prompt: 
+#     - name: password
+#       prompt: What is your password?
    tasks:
      - name: Creating users
        user:
