--- a/user_creation_with_password.yml
+++ b/user_creation_with_password.yml
@@ -3,7 +3,7 @@
    hosts: ansible-node2-rhel76
    become: yes
    vars:
-     password: redhat1
+     password: 
 #   vars_prompt: 
 #     - name: password
 #       prompt: What is your password?
