--- a/user_creation_with_password.yml
+++ b/user_creation_with_password.yml
@@ -1,6 +1,6 @@
 ---
  - name: creating users with password
-   hosts: ansible-node2-rhel76
+   hosts: all
    become: yes
    vars:
      password: 
