--- a/user_creation_with_password.yml
+++ b/user_creation_with_password.yml
@@ -2,8 +2,8 @@
  - name: creating users with password
    hosts: all
    become: yes
-   vars:
-     password: 
+   #   vars:
+   #  password: 
 #   vars_prompt: 
 #     - name: password
 #       prompt: What is your password?
